--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,7 @@ jobs:
         run: |
           ls -la
           pwd
+          ls -la src/package || echo "src/package not found"
 
       - name: Compile Packages
         run: |
@@ -32,11 +33,14 @@ jobs:
           export GOSUMDB=sum.golang.google.cn
           PLATFORM="${{ matrix.platform }}"
           TARGET=${PLATFORM%/*}
-          SUBTARGET=${PLATFORM#*/}
+          SUBTARGET=${PLATFORM%/*}
           BUILD_DIR="build-${TARGET}_${SUBTARGET}"
           mkdir -p "$BUILD_DIR"
-          rsync -a --delete ./src/package/ "$BUILD_DIR/package/"  # 假设包在 src/package/ 下，调整 rsync 以匹配结构
+          git clone https://github.com/immortalwrt/immortalwrt.git "$BUILD_DIR"
           cd "$BUILD_DIR"
+          mkdir -p package/custom
+          rsync -a --delete ../../src/package/iptest/ package/custom/iptest/
+          rsync -a --delete ../../src/package/luci-app-iptest/ package/custom/luci-app-iptest/
           # 自动生成 .config
           cat << EOF > .config
           CONFIG_TARGET_$TARGET=y
@@ -53,8 +57,8 @@ jobs:
             yes "" | make defconfig
             make tools/install -j$(nproc) || make tools/install V=s
             make toolchain/install -j$(nproc) || make toolchain/install V=s
-            make package/iptest/compile V=s -j$(nproc) || make package/iptest/compile V=s
-            make package/luci-app-iptest/compile V=s -j$(nproc) || true
+            make package/custom/iptest/compile V=s -j$(nproc) || make package/custom/iptest/compile V=s
+            make package/custom/luci-app-iptest/compile V=s -j$(nproc) || true
           done
 
       - name: Upload Artifacts
