--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        platform: ["mediatek/filogic"]  # Add more platforms as needed
+        platform: ["mediatek/filogic"] # Add more platforms as needed
 
     steps:
       - name: Checkout
@@ -46,11 +46,17 @@ jobs:
           echo "Syncing custom packages into the build directory..."
           
           # 为 iptest 及其 luCi app 创建目标目录
+          # **注意：mkdir -p 会自动创建 custom 目录**
           mkdir -p "$BUILD_DIR/package/custom/iptest"
           mkdir -p "$BUILD_DIR/package/custom/luci-app-iptest"
           
-          # 修复后的 rsync 命令：源路径不再使用 "../"，目标路径是明确的 BUILD_DIR
-          rsync -a --delete src/package/iptest/ "$BUILD_DIR/package/custom/iptest/"
+          # **重要修复 A：复制 iptest 主体，并排除嵌套的 luci-app-iptest 目录**
+          # 确保 iptest 目录下只包含 iptest 自身的 Makefile、go.mod、po/ 等文件。
+          rsync -a --delete --exclude 'luci-app-iptest/' src/package/iptest/ "$BUILD_DIR/package/custom/iptest/"
+          
+          # **重要修复 B：将嵌套的 luci-app-iptest 目录单独复制到 package/custom/ 下**
+          # 源路径：src/package/iptest/luci-app-iptest/
+          # 目标路径：$BUILD_DIR/package/custom/luci-app-iptest/ (实现并列存放)
           rsync -a --delete src/package/iptest/luci-app-iptest/ "$BUILD_DIR/package/custom/luci-app-iptest/"
           
           # 3. 进入构建目录，继续编译流程
@@ -86,4 +92,3 @@ jobs:
         with:
           name: packages-${{ matrix.platform }}
           path: build-*/bin/packages/*
-
