--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,17 +45,18 @@ jobs:
           # 2. 复制自定义包 (在仓库根目录执行 rsync，确保路径正确)
           echo "Syncing custom packages into the build directory..."
           
-          # 为 iptest 及其 luCi app 创建目标目录 (会同时创建 custom 目录)
+          # 创建两个目标目录的父目录，注意：custom/luci-app-iptest 必须存在
           mkdir -p "$BUILD_DIR/package/custom/iptest"
           mkdir -p "$BUILD_DIR/package/custom/luci-app-iptest"
           
-          # ** 核心修复 A：复制 iptest 主体，并排除嵌套的 luci-app-iptest 目录 **
-          # 这样 custom/iptest/ 目录下将不包含 LuCI 包。
-          rsync -a --delete --exclude 'luci-app-iptest/' src/package/iptest/ "$BUILD_DIR/package/custom/iptest/"
+          # ** 核心修复 A：直接将 iptest 整个目录（包括嵌套的 LuCI 包）复制到 custom/iptest/ 目录下 **
+          # 这样可以保证复制成功，即使 luci-app-iptest 目录嵌套在内。
+          rsync -a --delete src/package/iptest/ "$BUILD_DIR/package/custom/iptest/"
           
-          # ** 核心修复 B：将嵌套的 luci-app-iptest 目录单独复制到 package/custom/ 下 **
-          # 这样 custom/luci-app-iptest/ 目录下才是 LuCI 包的内容，实现了并列存放。
-          rsync -a --delete src/package/iptest/luci-app-iptest/ "$BUILD_DIR/package/custom/luci-app-iptest/"
+          # ** 核心修复 B：将嵌套的 luci-app-iptest 目录移动到 custom/ 的根目录下 **
+          # 这将实现 OpenWrt 编译系统所需的并列结构：custom/iptest 和 custom/luci-app-iptest
+          echo "Moving nested luci-app-iptest to custom/ root..."
+          mv "$BUILD_DIR/package/custom/iptest/luci-app-iptest" "$BUILD_DIR/package/custom/"
           
           # 3. 进入构建目录，继续编译流程
           cd "$BUILD_DIR"
