Refactor Makefile for iptest package

--- a/src/package/custom/iptest/Makefile
+++ b/src/package/custom/iptest/Makefile
@@ -1,7 +1,7 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=iptest
-PKG_VERSION:=1.2        # 随便填个版本号
+PKG_VERSION:=1.2
 PKG_RELEASE:=1
 
 include $(INCLUDE_DIR)/package.mk
@@ -11,18 +11,18 @@ define Package/iptest
   SECTION:=net
   CATEGORY:=Network
   TITLE:=iptest - IP Test Tool
-  # 如果有依赖（如需要 libc 或其他包），在这里加，例如 DEPENDS:= +libpthread
+  # DEPENDS:= ... （如果需要依赖，如 +libpthread）
 endef
 
 define Package/iptest/description
   A simple IP testing tool written in Go.
 endef
 
-# 模块名必须和 go.mod 里的 module xxx 一致
-GO_PKG:=iptest
+define Package/iptest/install
+	\( (call GoPackage/Package/Install/Bin, \)(1))
+endef
 
-# 如果你的程序有多个 binary 或特殊编译 flags，可以在这里加
-# GO_PKG_BUILD_FLAGS:= -tags netgo
+GO_PKG:=iptest
 
 define Build/Compile
 	$(call GoPackage/Build/Compile)
