--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,28 +1,24 @@
 name: Build OpenWrt Custom Packages
-
 on:
   push:
   pull_request:
-
 jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        format: [apk, ipk]       # 构建格式，可选 apk/ipk
-        package: [all]           # 可选择单个包或 all
-        platform:                 # 支持多平台，按 TARGET/SUBTARGET/DEVICE
+        format: [apk, ipk] # 构建格式，可选 apk/ipk
+        package: [all] # 可选择单个包或 all
+        platform: # 支持多平台，按 TARGET/SUBTARGET/DEVICE
           - "mediatek/filogic/mediatek_filogic_DEVICE_cmcc_rax3000m"
           - "rockchip/rk3588/orangepi5plus"
           - "x86/x86_64/x86_64_generic"
-
     steps:
       # ---------------------------
       # 1. 检出仓库
       # ---------------------------
       - name: Checkout repository
         uses: actions/checkout@v4
-
       # ---------------------------
       # 2. 安装构建依赖
       # ---------------------------
@@ -31,10 +27,9 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y \
             build-essential ccache curl file g++ gawk gettext git \
-            libncurses5-dev libssl-dev ncurses-term openssl \
+            libncurses-dev libssl-dev ncurses-term openssl \
             python3 python3-setuptools python3-venv rsync subversion \
             swig time unzip wget zlib1g-dev
-
       # ---------------------------
       # 3. 设置环境变量
       # ---------------------------
@@ -43,41 +38,32 @@ jobs:
           export USE_CCACHE=1
           export GOPROXY=https://goproxy.cn,direct
           export GOSUMDB=sum.golang.google.cn
-
       # ---------------------------
       # 4. 构建包
       # ---------------------------
       - name: Build packages
         run: |
           set -e
-
           FORMAT="${{ matrix.format }}"
           PACKAGE="${{ matrix.package }}"
           PLATFORM="${{ matrix.platform }}"
-
           echo "==> Build format: $FORMAT"
           echo "==> Package: $PACKAGE"
           echo "==> Platform: $PLATFORM"
-
           IMMORTALWRT_REPO="https://github.com/immortalwrt/immortalwrt.git"
           CUSTOM_PACKAGE_DIR="src/package/custom"
           ALL_PACKAGES=("iptest" "luci-app-iptest")
-
           # 解析平台信息
           IFS="/" read -r TARGET SUBTARGET DEVICE <<< "$PLATFORM"
-
           # 确定构建包
           if [ "$PACKAGE" != "all" ]; then
               PACKAGES=("$PACKAGE")
           else
               PACKAGES=("${ALL_PACKAGES[@]}")
           fi
-
           ARTIFACT_DIR="artifacts/${TARGET}_${SUBTARGET}_${DEVICE}/${FORMAT}"
           BUILD_DIR="build-${TARGET}_${SUBTARGET}_${DEVICE}-${FORMAT}"
-
           mkdir -p "$ARTIFACT_DIR"
-
           # ---------------------------
           # 准备构建目录（缓存复用）
           # ---------------------------
@@ -86,16 +72,12 @@ jobs:
               git clone "$IMMORTALWRT_REPO" "$BUILD_DIR"
               rsync -a "$CUSTOM_PACKAGE_DIR/" "$BUILD_DIR/package/custom/"
               pushd "$BUILD_DIR"
-
               ./scripts/feeds update -a
               ./scripts/feeds install -a
-
               # 自动生成 .config
-              cat > .config << EOF
-CONFIG_TARGET_${TARGET}=y
-CONFIG_TARGET_${TARGET}_${SUBTARGET}=y
-CONFIG_TARGET_DEVICE_${DEVICE}=y
-EOF
+              echo "CONFIG_TARGET_${TARGET}=y" > .config
+              echo "CONFIG_TARGET_${TARGET}_${SUBTARGET}=y" >> .config
+              echo "CONFIG_TARGET_DEVICE_${DEVICE}=y" >> .config
               for pkg in "${PACKAGES[@]}"; do
                   echo "CONFIG_PACKAGE_${pkg}=m" >> .config
               done
@@ -104,7 +86,6 @@ EOF
               pushd "$BUILD_DIR"
               echo "==> Using cached build dir: $BUILD_DIR"
           fi
-
           # ---------------------------
           # 设置包格式
           # ---------------------------
@@ -116,28 +97,23 @@ EOF
               sed -i '/^CONFIG_PACKAGE_APK/d' .config
           fi
           make defconfig
-
           # ---------------------------
           # 安装工具链 / golang host
           # ---------------------------
           make tools/install -j$(nproc)
           make toolchain/install -j$(nproc)
           make package/golang/host/compile -j$(nproc)
-
           # ---------------------------
           # 编译自定义插件（增量编译）
           # ---------------------------
           for pkg in "${PACKAGES[@]}"; do
               make "package/custom/$pkg/compile" -j$(nproc) V=s || true
           done
-
           # ---------------------------
           # 收集产物
           # ---------------------------
           find bin/packages -type f -name "*.$FORMAT" -exec cp {} "../../$ARTIFACT_DIR/" \;
-
           popd
-
       # ---------------------------
       # 5. 上传产物
       # ---------------------------
