--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,26 +1,31 @@
 name: Build OpenWrt Custom Packages
+
 on:
   push:
   pull_request:
+
 jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
+      max-parallel: 2   # 防止 6 小时超时
       matrix:
-        format: [apk, ipk] # 构建格式，可选 apk/ipk
-        package: [all] # 可选择单个包或 all
-        platform: # 支持多平台，按 TARGET/SUBTARGET/DEVICE
+        format: [apk, ipk]
+        package: [all]
+        platform:
           - "mediatek/filogic/mediatek_filogic_DEVICE_cmcc_rax3000m"
           - "rockchip/rk3588/orangepi5plus"
           - "x86/x86_64/x86_64_generic"
+
     steps:
       # ---------------------------
       # 1. 检出仓库
       # ---------------------------
       - name: Checkout repository
         uses: actions/checkout@v4
+
       # ---------------------------
-      # 2. 安装构建依赖
+      # 2. 安装构建依赖（修复 pyelftools）
       # ---------------------------
       - name: Install build dependencies
         run: |
@@ -28,94 +33,128 @@ jobs:
           sudo apt-get install -y \
             build-essential ccache curl file g++ gawk gettext git \
             libncurses-dev libssl-dev ncurses-term openssl \
-            python3 python3-setuptools python3-venv rsync subversion \
-            swig time unzip wget zlib1g-dev
+            python3 python3-dev python3-setuptools python3-venv python3-pyelftools \
+            rsync subversion swig time unzip wget zlib1g-dev
+
       # ---------------------------
       # 3. 设置环境变量
       # ---------------------------
       - name: Set environment
         run: |
-          export USE_CCACHE=1
-          export GOPROXY=https://goproxy.cn,direct
-          export GOSUMDB=sum.golang.google.cn
+          echo "USE_CCACHE=1" >> $GITHUB_ENV
+          echo "GOPROXY=https://goproxy.cn,direct" >> $GITHUB_ENV
+          echo "GOSUMDB=sum.golang.google.cn" >> $GITHUB_ENV
+
       # ---------------------------
-      # 4. 构建包
+      # 4. 缓存 OpenWrt 工具链（关键提速）
+      # ---------------------------
+      - name: Cache OpenWrt toolchain
+        uses: actions/cache@v4
+        with:
+          path: |
+            ${{ github.workspace }}/build-${{ matrix.platform }}-${{ matrix.format }}/dl
+            ${{ github.workspace }}/build-${{ matrix.platform }}-${{ matrix.format }}/build_dir/host
+            ${{ github.workspace }}/build-${{ matrix.platform }}-${{ matrix.format }}/build_dir/toolchain-*
+            ${{ github.workspace }}/build-${{ matrix.platform }}-${{ matrix.format }}/staging_dir
+          key: openwrt-${{ matrix.platform }}-${{ matrix.format }}-v1
+          restore-keys: |
+            openwrt-${{ matrix.platform }}-${{ matrix.format }}-
+
+      # ---------------------------
+      # 5. 构建包
       # ---------------------------
       - name: Build packages
         run: |
           set -e
+
           FORMAT="${{ matrix.format }}"
           PACKAGE="${{ matrix.package }}"
           PLATFORM="${{ matrix.platform }}"
+
           echo "==> Build format: $FORMAT"
           echo "==> Package: $PACKAGE"
           echo "==> Platform: $PLATFORM"
+
           IMMORTALWRT_REPO="https://github.com/immortalwrt/immortalwrt.git"
           CUSTOM_PACKAGE_DIR="src/package/custom"
           ALL_PACKAGES=("iptest" "luci-app-iptest")
-          # 解析平台信息
+
           IFS="/" read -r TARGET SUBTARGET DEVICE <<< "$PLATFORM"
-          # 确定构建包
+
           if [ "$PACKAGE" != "all" ]; then
-              PACKAGES=("$PACKAGE")
+            PACKAGES=("$PACKAGE")
           else
-              PACKAGES=("${ALL_PACKAGES[@]}")
+            PACKAGES=("${ALL_PACKAGES[@]}")
           fi
+
           ARTIFACT_DIR="artifacts/${TARGET}_${SUBTARGET}_${DEVICE}/${FORMAT}"
-          BUILD_DIR="build-${TARGET}_${SUBTARGET}_${DEVICE}-${FORMAT}"
+          BUILD_DIR="build-${PLATFORM}-${FORMAT}"
+
           mkdir -p "$ARTIFACT_DIR"
+
           # ---------------------------
-          # 准备构建目录（缓存复用）
+          # 准备构建目录
           # ---------------------------
           if [ ! -d "$BUILD_DIR" ]; then
-              echo "==> Cloning ImmortalWrt for $PLATFORM"
-              git clone "$IMMORTALWRT_REPO" "$BUILD_DIR"
-              rsync -a "$CUSTOM_PACKAGE_DIR/" "$BUILD_DIR/package/custom/"
-              pushd "$BUILD_DIR"
-              ./scripts/feeds update -a
-              ./scripts/feeds install -a
-              # 自动生成 .config
-              echo "CONFIG_TARGET_${TARGET}=y" > .config
-              echo "CONFIG_TARGET_${TARGET}_${SUBTARGET}=y" >> .config
-              echo "CONFIG_TARGET_DEVICE_${DEVICE}=y" >> .config
-              for pkg in "${PACKAGES[@]}"; do
-                  echo "CONFIG_PACKAGE_${pkg}=m" >> .config
-              done
-              make defconfig
+            echo "==> Cloning ImmortalWrt"
+            git clone --depth=1 "$IMMORTALWRT_REPO" "$BUILD_DIR"
+            rsync -a "$CUSTOM_PACKAGE_DIR/" "$BUILD_DIR/package/custom/"
+
+            pushd "$BUILD_DIR"
+
+            ./scripts/feeds update -a
+            ./scripts/feeds install -a
+
+            echo "CONFIG_TARGET_${TARGET}=y" > .config
+            echo "CONFIG_TARGET_${TARGET}_${SUBTARGET}=y" >> .config
+            echo "CONFIG_TARGET_DEVICE_${DEVICE}=y" >> .config
+
+            for pkg in "${PACKAGES[@]}"; do
+              echo "CONFIG_PACKAGE_${pkg}=m" >> .config
+            done
+
+            make defconfig
           else
-              pushd "$BUILD_DIR"
-              echo "==> Using cached build dir: $BUILD_DIR"
+            pushd "$BUILD_DIR"
+            echo "==> Using cached build dir"
           fi
+
           # ---------------------------
-          # 设置包格式
+          # 包格式切换
           # ---------------------------
           if [ "$FORMAT" = "apk" ]; then
-              echo "CONFIG_PACKAGE_APK=y" >> .config
-              sed -i '/^CONFIG_PACKAGE_IPKG/d' .config
+            echo "CONFIG_PACKAGE_APK=y" >> .config
+            sed -i '/^CONFIG_PACKAGE_IPKG/d' .config
           else
-              echo "CONFIG_PACKAGE_IPKG=y" >> .config
-              sed -i '/^CONFIG_PACKAGE_APK/d' .config
+            echo "CONFIG_PACKAGE_IPKG=y" >> .config
+            sed -i '/^CONFIG_PACKAGE_APK/d' .config
           fi
+
           make defconfig
+
           # ---------------------------
-          # 安装工具链 / golang host
+          # 工具链 / golang（可命中缓存）
           # ---------------------------
           make tools/install -j$(nproc)
           make toolchain/install -j$(nproc)
           make package/golang/host/compile -j$(nproc)
+
           # ---------------------------
-          # 编译自定义插件（增量编译）
+          # 编译自定义包（失败不中断）
           # ---------------------------
           for pkg in "${PACKAGES[@]}"; do
-              make "package/custom/$pkg/compile" -j$(nproc) V=s || true
+            make "package/custom/$pkg/compile" -j$(nproc) V=s || true
           done
+
           # ---------------------------
           # 收集产物
           # ---------------------------
           find bin/packages -type f -name "*.$FORMAT" -exec cp {} "../../$ARTIFACT_DIR/" \;
+
           popd
+
       # ---------------------------
-      # 5. 上传产物
+      # 6. 上传产物
       # ---------------------------
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
